# Negotiator

./: .env.example  .vercelignore  CLAUDE.md  README.md  package-lock.json  package.json  session.md
.claude/: settings.local.json
.claude/skills/new-scenario/: SKILL.md
.claude/skills/playtest-viktor/: SKILL.md
.claude/skills/voice-ab/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/api/negotiate/: route.ts
app/api/voice/: route.ts
backend/: .gitignore  Cargo.toml  README.md  wrangler.toml
backend/src/: error.rs  handlers.rs  lib.rs  types.rs
components/: DialogueLog.tsx  EndCard.tsx  GuardPortrait.tsx  MusicToggle.tsx  PassportCard.tsx  PlayerInput.tsx  SuspicionMeter.tsx  TrustMeter.tsx
docs/: ARCHITECTURE.md  DEPLOYMENT.md  STATUS.md  SUBMISSION.md  TESTING.md
lib/: audio.ts  elevenlabs.ts  endCaseFile.test.ts  endCaseFile.ts  gameState.test.ts  gameState.ts  gate.ts  llm.test.ts  llm.ts  music.ts  passport.ts  types.ts
scripts/: playtest.ts
