[package]
name = "negotiator-worker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5", features = ["http"] }
worker-macros = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
